# shorten-links

./: .env_example  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt
docker/: app.sh  celery.sh  db.sh
migrations/: env.py
migrations/versions/: 2025_03_17_1823-6521682aaa10_add_created_at_in_user_table.py  2025_03_17_2214-1af40832bae4_initial_migration.py  2025_03_17_2218-8eda83df041f_fix_user_created_at.py  2025_03_17_2235-9c2283d2c179_initial_migration.py  2025_03_18_1456-d5421a5cd5bb_rename_shorten_link_to_alias.py  2025_03_20_1105-488d221b8280_add_project_column.py  2025_03_21_2133-9f0f1ee6b530_add_task_id_to_shortenlink.py  2025_03_23_1238-d449cd8d3801_in_oldshortenlink_set_alias_not_unique.py  4fde316a88ed_initial_migration.py  a227c281deb7_drop_user_from_models.py
src/: alembic.ini  app.py  celery.py  config.py  database.py  main.py  models.py  requirements.txt
src/auth/: db.py  models.py  user_manager.py  users.py
src/celery_app/: config_celery.py
src/shorten_links/: crud.py  router.py  schemas.py  tasks.py  utils.py
