[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.11"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
pydantic = {extras = ["email"], version = "^2.10.6"}
pydantic-settings = "^2.8.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.39"}
asyncpg = "^0.30.0"
alembic = "^1.15.1"
fastapi-users = {extras = ["sqlalchemy"], version = "^14.0.1"}
loguru = "^0.7.3"
fastapi-cache2 = {extras = ["redis"], version = "^0.2.2"}
celery = {extras = ["redis"], version = "^5.4.0"}


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

